@@ -106,3 +106,5 @@ Version 1.4.1
 * Fixed the bug of RubyEnumerable#sortBy ordering
 
 * Increased acceptable comparators of RubyEnumerable#sort & RubyEnumerable#sortBy
+
+* Changed RubyHash entries to ComparableEntry
